fix portfolio site ingress, spacing, and docker build

--- a/src/public/main.css
+++ b/src/public/main.css
@@ -4,6 +4,7 @@ body {
   display: flex;
   font-family: 'Lato', sans-serif;
   flex-direction: column;
+  margin: 0;
   min-height: 100%;
 }
 
